--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,53 +1,70 @@
 @import url("https://fonts.googleapis.com/css2?family=Bangers&family=Clicker+Script&display=swap");
-body {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: center;
-  font-family: "Bangers", cursive;
-  font-weight: 400;
-  font-size: 46px;
-  margin-top: 32px;
-  letter-spacing: 0.1rem;
-  background-color: #f9f9f9;
+body{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    font-family: "Bangers", cursive;
+    font-weight: 400;
+    font-size: 30px;
+    margin-top: 32px;
+    letter-spacing: 0.1rem;
+    background-color: #f9f9f9;
 }
-main.main__container{
-    color: red;
+header{
+    display: flex;
+    background-color:rgb(221, 221, 221) ;
+    width: 100%;
+    justify-content: center;
 }
-form{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
-  gap: 19px;
-  margin-bottom: 15px;
+.container{
+    justify-content: center;
+    translate: 1px;
+    background-color: whitesmoke;
 }
-form input{
-  width: 15rem;
-  height: 2rem;
-  padding-left: 10px;
-  color: #5f5c5c;
-  font-size: 13px;
-  border: none;
-  border-radius: 5px;
-  box-shadow: 0px -1px 18px 8px rgba(255, 255, 255, 0.2);
+.logo{
+    margin-top: 7px;
 }
-form h1 {
-  font-size: 24px;
-  font-weight: 700;
-  color: black;
-}
-form.main__container__form {
-  background-color: #f2ff00;
-  border: none;
-  border-radius: 5px;
-  width: 13rem;
-  height: 2.3rem;
-  color: black;
-  font-weight: 600;
-  font-size: 15px;
-  font-family: "Bangers", cursive;
-  font-size: 16px;
-  letter-spacing: 0.1rem;
-}
+
+form {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 19px;
+    width: 350px;
+    border: solid 1px black;
+    box-shadow: 10px 10px 5px 0px rgba(2, 2, 2, 0.75);
+    margin: 30px auto;
+    padding: 15px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    height: 300px;
+  }
+  form  input {
+    width: 15rem;
+    height: 2rem;
+    padding-left: 10px;
+    color: #5f5c5c;
+    font-size: 13px;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0px -1px 18px 8px rgba(255, 255, 255, 0.2);
+  }
+  form button{
+      background-color:#5f5c5c;
+      border: none;
+      color: white;
+      font-size: 1.2rem;
+      font-weight: bold;
+      padding: 5px 10px;
+      border-radius: 10px;
+  }
+  form button:hover{
+      background-color:green;
+  }
+  form button:active{
+      background-color:rgb(1, 110, 1);
+  }
