--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -7,24 +7,24 @@ body {
   align-items: center;
   font-family: "Bangers", cursive;
   font-weight: 400;
-  font-size: 46px;
+  font-size: 30px;
   margin-top: 32px;
   letter-spacing: 0.1rem;
   background-color: #f9f9f9;
 }
 header{
-    display: flex;
-    background-color: whitesmoke;
-    width: 100%;
-    justify-content: center;
+  display: flex;
+  background-color: rgb(221, 221, 221);
+  width: 100%;
+  justify-content: center;
 }
 .container{
-    justify-content: center;
-    translate: 1px;
-    background-color: whitesmoke;
+  justify-content: center;
+  translate: 1px;
+  
 }
 .logo{
-    margin-top: 7px;
+   margin-top: 7px;
 }
 
 form {
@@ -33,8 +33,19 @@ form {
   flex-direction: column;
   align-items: center;
   gap: 19px;
-  margin-bottom: 15px;
+  justify-content: center;
+  gap: 19px;
+  width: 350px;
+  border: solid 1px black;
+  box-shadow: 10px 10px 5px 0px rgba(2, 2, 2, 0.75);
+  margin: 30px auto;
+  padding: 15px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  height: 550px;
+
 }
+
 form  input {
   width: 15rem;
   height: 2rem;
@@ -60,5 +71,20 @@ form button:hover{
 form button:active{
     background-color:rgb(1, 110, 1);
 }
+@media (min-width:280px){
 
+  body {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    font-family: "Bangers", cursive;
+    font-weight: 400;
+    font-size: 30px;
+    margin-top: 32px;
+    letter-spacing: 0.1rem;
+    background-color: #f9f9f9;
+}
 
+}
